--- a/rock.html
+++ b/rock.html
@@ -8,7 +8,7 @@ h1 {
 
 }
 p1 {
-	text-shadow: 1px 1px 5px ;
+	text-shadow: 1px 1px 5px black;
 	color: red;
 	font-family: serif; 
 }
@@ -21,7 +21,6 @@ img {
 }
 
 
-
 </style>
 </head>
 <body>
@@ -31,7 +30,6 @@ img {
 
 <p1>Be to me a rock of refuge, to which I may continually come; you have given the command to save me, for you are my rock and my fortress” .</p1>
 <p>- Psalm 71:1-3</p>
-
 
 </body>
 </html>
